<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.detail.DetailActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginBottom="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_height="wrap_content">
            <androidx.appcompat.widget.Toolbar
                android:id="@id/toolbar"
                style="@style/Background"
                android:layout_width="match_parent"
                android:layout_height="?actionBarSize"/>
        </com.google.android.material.appbar.AppBarLayout>

        <ImageView
            android:id="@+id/iv_detail"
            app:layout_constraintTop_toBottomOf="@id/appbar"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:src="@tools:sample/avatars"
            android:contentDescription="@string/image_detail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_name"
            app:layout_constraintTop_toBottomOf="@id/iv_detail"
            app:layout_constraintStart_toStartOf="@id/iv_detail"
            app:layout_constraintEnd_toEndOf="parent"
            android:text="@string/meal_name"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_asal"
            app:layout_constraintTop_toBottomOf="@id/tv_name"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/darker_gray"
            android:text="@string/from"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_category"
            app:layout_constraintTop_toTopOf="@id/tv_asal"
            app:layout_constraintBottom_toBottomOf="@id/tv_asal"
            app:layout_constraintStart_toEndOf="@id/tv_asal"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:text="@string/category"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/darker_gray"
            android:textSize="12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/title_ingredient"
            app:layout_constraintTop_toBottomOf="@id/tv_asal"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:text="@string/title_ingredient"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="match_parent"/>
        <TextView
            android:id="@+id/ingredient"
            app:layout_constraintTop_toBottomOf="@id/title_ingredient"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toStartOf="@id/measure"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ingredients"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/measure"
            app:layout_constraintTop_toBottomOf="@id/title_ingredient"
            app:layout_constraintStart_toEndOf="@id/ingredient"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="16dp"
            android:text="@string/ingredients"
            android:textSize="12sp"
            android:fontFamily="@font/poppins_light"
            android:textColor="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title_instruction"
            app:layout_constraintTop_toBottomOf="@id/ingredient"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:layout_marginTop="16dp"
            android:text="@string/instructions"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/content_instructions"
            app:layout_constraintTop_toBottomOf="@id/title_instruction"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:text="@string/all_instruction"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/poppins_light"
            android:textSize="12sp"
            android:textColor="@android:color/darker_gray"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/title_youtube"
            app:layout_constraintTop_toBottomOf="@id/content_instructions"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            android:layout_marginTop="16dp"
            android:text="@string/watch_youtube"
            android:fontFamily="@font/poppins_bold"
            android:textStyle="bold"
            android:textSize="16sp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"/>

        <com.pierfrancescosoffritti.androidyoutubeplayer.core.player.views.YouTubePlayerView
            android:id="@+id/youtube"
            app:layout_constraintTop_toBottomOf="@id/title_youtube"
            app:layout_constraintStart_toStartOf="@id/tv_name"
            app:layout_constraintEnd_toEndOf="@id/tv_name"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:autoPlay="false"/>

    </androidx.constraintlayout.widget.ConstraintLayout>


</ScrollView>